// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingPanel should render when selected 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm Apjit"
  >
    <div
      class="sc-AxirZ eKayzj"
    />
    answer text
  </div>
</DocumentFragment>
`;

exports[`SettingPanel should render when selected and reveal and correct 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm kcwPPb"
  >
    <div
      class="sc-AxirZ BHBvY"
    />
    answer text
  </div>
</DocumentFragment>
`;

exports[`SettingPanel should render when selected and reveal and incorrect 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm iLpmua"
  >
    <div
      class="sc-AxirZ eRsxqP"
    />
    answer text
  </div>
</DocumentFragment>
`;

exports[`SettingPanel should render with default props 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm Apjit"
  >
    <div
      class="sc-AxirZ gphSZZ"
    />
    answer text
  </div>
</DocumentFragment>
`;
